# libigl-community-plugins

./: CMakeLists.txt  README.md
Module/: CMakeLists.txt  stkLibiglBoolean3DMesher.cxx  stkLibiglBoolean3DMesher.h  vtk.module
Plugins/Libigl/: CMakeLists.txt  paraview.plugin
Plugins/Libigl/stkLibiglCopyleft/: CMakeLists.txt  stkLibiglBoolean3DMesher.cxx  stkLibiglBoolean3DMesher.h  stkLibiglCopyLeftScalarClip.cxx  stkLibiglCopyLeftScalarClip.h  stkLibiglCopyleftPlugins.xml  stkScalarClip.cxx  stkScalarClip.h  vtk.module
src/: CMakeLists.txt  stkLibiglBoolean3DMesher.cxx  stkLibiglBoolean3DMesher.h
src/Resources/: LibiglCopyleftFilters.xml  LibiglCopyleftProxies.xml  stkLibiglBoolean3DMesher.xml
